--- a/Rookie.AssetManagement/appsettings.json
+++ b/Rookie.AssetManagement/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnection": "server=sqlserver-team3-group2.database.windows.net;database=AssetManagementDev;uid=rookiedev;password=rookie@2021;"
+    //"DbConnection": "server=sqlserver-team3-group2.database.windows.net;database=AssetManagementDev;uid=rookiedev;password=rookie@2021;",
+    "DbConnection": "server=DESKTOP-QQQPRQV;database=AssetManagement;Trusted_Connection=True;"
   }
 }
