--- a/Rookie.AssetManagement/Frontend/package.json
+++ b/Rookie.AssetManagement/Frontend/package.json
@@ -4,7 +4,7 @@
   "author": "quangduccao",
   "license": "MIT",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -31,6 +31,7 @@
     "react-scripts": "^4.0.3",
     "react-select": "^4.3.0",
     "redux-saga": "^1.1.3",
+    "sass": "^1.57.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
@@ -47,7 +48,6 @@
     "eslint": "^7.22.0",
     "husky": "^5.1.3",
     "lint-staged": "^10.5.4",
-    "node-sass": "^5.0.0",
     "typescript": "^4.2.3"
   },
   "browserslist": {
